# bgfx-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
bgfx-sys/: .gitignore  Cargo.toml  build.rs
bgfx-sys/src/: lib.rs
examples/: 00-helloworld.rs  01-cubes.rs
examples-lib/: Cargo.toml
examples-lib/src/: lib.rs
examples/00-helloworld/: main.rs
examples/01-cubes/: main.rs
examples/common/: common.sh  mod.rs
examples_lib/src/: lib.rs
src/: flags.rs  lib.rs
