[package]
name = "bgfx"
version = "0.1.0"
authors = ["Johan Sköld <johan@skold.cc>"]
build = "build.rs"

[dependencies]
bitflags = "0.3.2"

[dev-dependencies]
cgmath = "0.7.0"
winit = "0.17.0"
time = "0.1.33"

[dev-dependencies.examples-lib]
path = "examples_lib/"

[build-dependencies]
glob = "0.2"
bindgen = "0.25.5"

[[example]]
name = "00-helloworld"
path = "examples/00-helloworld/main.rs"

[[example]]
name = "01-cubes"
path = "examples/01-cubes/main.rs"